--- a/CensusAnalyzerProblem/CensusAnalyzerProblem.csproj
+++ b/CensusAnalyzerProblem/CensusAnalyzerProblem.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NLog" Version="4.7.12" />
+  </ItemGroup>
+
 </Project>
